new post and design

--- a/_posts/projects/2017-11-22-gollum.md
+++ b/_posts/projects/2017-11-22-gollum.md
@@ -7,11 +7,11 @@ tags: [sample]
 comments: true
 share: true
 image:
-  teaser: 2017-11-22-gollum.png
+  teaser: 2017-11-22-gollum.gif
 ---
 
 <figure>
-	<a href="/assets/images/gollum.gif"><img src="/assets/images/gollum.gif"></a>
+	<a href="/images/2017-11-22-gollum.gif"><img src="/images/2017-11-22-gollum.gif"></a>
 </figure>
 
 Automated image analysis tool for quantifying the presence of a given periodical structure. Originally developed to identify the 190 nm periodical structure in the actin/spectrin cytoskeleton of neurons, as first revealed by super-resolution fluorescence microscopy methods.
