--- a/_posts/projects/2017-11-22-gollum.md
+++ b/_posts/projects/2017-11-22-gollum.md
@@ -7,7 +7,7 @@ tags: [sample]
 comments: true
 share: true
 image:
-  teaser: 2017-11-22-gollum.gif
+  teaser: 2017-11-22-gollum.png
 ---
 
 <figure>
