new post and design

--- a/_posts/projects/2016-12-01-tormenta.md
+++ b/_posts/projects/2016-12-01-tormenta.md
@@ -3,11 +3,11 @@ layout: posts
 title: Tormenta
 categories: projects
 modified: 2016-06-01T16:28:11-04:00
-tags: [sample]
+tags: [instrument control, pyqt]
 comments: true
 share: true
 image:
-  teaser: 2018-03-25-name_similarity.png
+  teaser: 2016-12-01-tormenta.gif
 ---
 
 Instrument control software and graphical user interace written in Python. Drives lasers, cameras and data acquisition boards in an optical microscopy setup. Several analysis routines are integrated. 
