social and spotify

--- a/_posts/projects/2017-11-22-gollum.md
+++ b/_posts/projects/2017-11-22-gollum.md
@@ -32,7 +32,7 @@ We validated its performance by an examination of the periodical structure in ne
 
 <figure style="width: 1000px" class="align-center">
 	<img src="/images/2017-11-22-gollum.gif">
-	<figcaption>Results over an image. Mooving the threshold slider selects which subregions are recognized as presenting the periodical structure.</figcaption>
+	<figcaption>Results over an image. Moving the threshold slider selects which subregions are recognized as presenting the periodical structure.</figcaption>
 </figure>
 
 ## Resources
