--- a/_posts/projects/2016-12-01-tormenta.md
+++ b/_posts/projects/2016-12-01-tormenta.md
@@ -7,6 +7,7 @@ tags: [instrument control, pyqt]
 comments: true
 share: true
 image:
+  header: 2016-12-01-tormenta.png
   teaser: 2016-12-01-tormenta.gif
   feature: 2016-12-01-tormenta.png
 ---
