--- a/_posts/projects/2017-11-22-gollum.md
+++ b/_posts/projects/2017-11-22-gollum.md
@@ -7,6 +7,7 @@ tags: [image analysis, pyqt]
 comments: true
 share: true
 image:
+  header: 2017-11-22-gollum.png
   teaser: 2017-11-22-gollum.png
 ---
 
