--- a/_posts/projects/2016-12-01-tormenta.md
+++ b/_posts/projects/2016-12-01-tormenta.md
@@ -4,15 +4,13 @@ title: Tormenta
 categories: projects
 modified: 2016-06-01T16:28:11-04:00
 tags: [instrument control, pyqt]
-comments: true
-share: true
 image:
   header: 2016-12-01-tormenta.png
   teaser: 2016-12-01-tormenta.gif
   feature: 2016-12-01-tormenta.png
 ---
 
-Instrument integration software and graphical user interface for microscopy written in Python.
+Instrument integration Python software for microscopy.
 
 ## Motivation
 
