--- a/_posts/projects/2017-11-22-gollum.md
+++ b/_posts/projects/2017-11-22-gollum.md
@@ -4,14 +4,12 @@ title: Ring finder / Gollum
 categories: projects
 modified: 2017-11-22
 tags: [image analysis, pyqt]
-comments: true
-share: true
 image:
   header: 2017-11-22-gollum.png
   teaser: 2017-11-22-gollum.png
 ---
 
-Automated quantification of periodical structures. Originally developed for investigating the cytoskeleton of neurons.
+Automated quantification of periodical structures.
 
 ## Motivation
 
