teaser link fix

--- a/_posts/projects/2019-01-19-Kobe.md
+++ b/_posts/projects/2019-01-19-Kobe.md
@@ -5,7 +5,7 @@ categories: projects
 modified: 2019-01-19
 tags: [pandas, random forest classifier, sklearn, seaborn]
 image:
-  teaser: /2019-01-19-Kobe/teaser.png
+  teaser: /images/2019-01-19-Kobe/teaser.png
 ---
 
 Building a model for shot effectivity of the great Kobe Bryant.
