--- a/_posts/projects/2019-01-19-Kobe.md
+++ b/_posts/projects/2019-01-19-Kobe.md
@@ -6,7 +6,7 @@ modified: 2019-01-19
 tags: [pandas, random forest classifier, sklearn, seaborn]
 image:
  teaser: /2019-01-19-Kobe/teaser.png
- feature: /2019-01-19-Kobe/teaser.png
+ thumb: /2019-01-19-Kobe/teaser.png
 ---
 
 Building a model for shot effectivity of the great Kobe Bryant.
